--- a/.cpl/ChmlFrp_Professional_Launcher.csproj
+++ b/.cpl/ChmlFrp_Professional_Launcher.csproj
@@ -1,21 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
-  <PropertyGroup>
-    <UseWPF>true</UseWPF>
-    <Version>0.0.1.0</Version>
-    <LangVersion>9</LangVersion>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net48</TargetFramework>
-    <ApplicationIcon>Icons\logo.ico</ApplicationIcon>
-    <Copyright>Copyright © Qusay Diaz 2024-2025</Copyright>
-    <AssemblyName>ChmlFrp Professional Launcher</AssemblyName>
-  </PropertyGroup>
+    <PropertyGroup>
+        <UseWPF>true</UseWPF>
+        <LangVersion>9</LangVersion>
+        <OutputType>WinExe</OutputType>
+        <FileVersion>0.0.1.1</FileVersion>
+        <TargetFramework>net48</TargetFramework>
+        <AssemblyVersion>0.0.1.0</AssemblyVersion>
+        <ApplicationIcon>Icons\logo.ico</ApplicationIcon>
+        <Copyright>Copyright © Qusay Diaz 2024-2025</Copyright>
+        <AssemblyName>ChmlFrp Professional Launcher</AssemblyName>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ApplicationDefinition Include="Properties\App.xaml" />
-    <PackageReference Include="ini-parser" Version="2.5.2" />
-    <PackageReference Include="Costura.Fody" Version="6.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <PackageReference Include="Costura.Fody" Version="6.0.0"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+    </ItemGroup>
 </Project>
