--- a/.cat/ChmlFrp_Advanced_Toolkit.csproj
+++ b/.cat/ChmlFrp_Advanced_Toolkit.csproj
@@ -6,13 +6,14 @@
         <LangVersion>latest</LangVersion>
         <FileVersion>0.0.1.5</FileVersion>
         <TargetFramework>net48</TargetFramework>
-        <AssemblyVersion>0.0.1.0</AssemblyVersion>
+        <AssemblyVersion>0.0.2</AssemblyVersion>
         <ApplicationIcon>Icons\logo.ico</ApplicationIcon>
         <Copyright>Copyright © Qusay Diaz 2024-2025</Copyright>
         <AssemblyName>ChmlFrp Advanced Toolkit</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
+        <Reference Include="System.Net.Http" />
         <PackageReference Include="Costura.Fody" Version="6.0.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
     </ItemGroup>
